2010-09-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): When calculating the horizontal space
	required for x axis tick labels, we must ignore ticks that are outside
	the current axis range.

	* src/mouse.c (apply_zoom): Tick labels generated by
	'using xticlabels(N)' may have changed while the plot was zoomed, so we
	must preserve them when un-zooming.

2010-09-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_close):  Free matrix data that was stored in memory
	during input.  Otherwise we leak memory after every plot of matrix data.

	* src/color.h src/gadgets.c src/gadgets.h src/misc.c src/term.c
	src/term_api.h:  Repair some lp_style_type definitions and initializers
	that were incorrect or incomplete.

2010-09-08  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/plot2d.c (store_label eval_plots): Extend variable color support
	for LABELPOINTS style by allowing "with labels tc X lc Y" where X, Y is
	one of "lc variable", "lc palette z", or "lc rgb variable".

	* src/misc.c (lp_parse): Revert the patch of 2010-07-08 because 
	it accidentally disabled the coloring option "lc N".
	* src/graph3d.c (key_sample_line_pm3d key_sample_point_pm3d): 
	More correct fix to bug #3026477: the functions above failed to call
	the simpler key sample routines in case of plots with coloring option
	"lc N" and "lc rgb 'color'".

2010-09-06  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/term-ja.diff docs/gnuplot-ja.doc:
	Sync Japanese documentation to gnuplot.doc rev 1.623

2010-09-04  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/set.c (set_logscale): Removed arbitrary limitation for log base
	(was >= 1.1, now > 1.0)

2010-09-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/readline.c (readline): Fix Windows breakage (failure to
	recognize ^M as newline) caused by error in OSK code removal.

2010-08-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/os2/gnupmdrv.rc: Removed menu item Commands to clipboard.